<resources>
    <string name="label">برچسب</string>
    <string name="user_name_login_not_valid">نام کاربری نباید خالی باشد</string>
    <string name="enter_user_name">نام کاربری خود را وارد نماید</string>
    <string name="enter_password">رمز عبور خود را وارد نمایید</string>


    <string name="password_weak">پسورد ضعیف</string>
    <string name="password_good">پسورد خوب</string>
    <string name="password_strong">پسورد قوی</string>
    <string name="passEmpty">رمز عبور نباید خالی باشد</string>
    <string name="usernameEmpty">نام کاربری نباید خالی باشد</string>
    <string name="notValidPass">رمز عبور را صحیح وارد کنید</string>
    <string name="notValidUser">نام کاربری را صحیح وارد کنید</string>

    <string name="ent_phone_number">شماره موبایل خود را وارد نمایید</string>
    <string name="start_phone_number">شماره تلفن باید با 09 شروع شود</string>
    <string name="length_phone_number">شماره تلفن باید 11 رقم باشد</string>
    <string name="empty_phone_number">شماره تلفن نباید خالی باشد</string>
    <string name="not_valid_phone_number">شماره تلفن معتبر نمی باشد</string>
    <string name="not_pass_persian">رمز عبور می بایست به صورت انگلیسی تایپ شود</string>

    <string name="login_to_app">ورود به سامانه</string>

    <string name="text_ok_phone">کد تایید ارسال شده به شماره موبایل زیر را وارد نمایید</string>
    <string name="edit_phone_number"> <a href="#">نیاز به اصلاح شماره موبایل دارید ؟</a>
    </string>
    <string name="reSendCodeVerify">ارسال مجدد کد تا </string>
    <string name="reSendCode"> <a href="#">ارسال مجدد</a>
    </string>
    <string name="expert_details">جزییات کارشناسی</string>

    <string name="inter_insurance_number">نام بیمه گذار یا شماره بیمه نامه</string>
    <string name="action_back">Back</string>
    <string name="action_voice_search">Voice search</string>
    <string name="action_clear_search">Clear search</string>

    <string name="support_call">تماس با پشتیبانی</string>
    <string name="review_again">بررسی مجدد</string>
    <string name="review_internet">بررسی اینترنت</string>
    <string name="not_connected_to_the_server">ارتباط شما با سرور برقرار نیست</string>
    <string name="receive_and_install_update">دریافت و نصب بروزرسانی</string>
    <string name="your_phone_not_supported">مدل گوشی همراه شما \n توسط برنامه پشتیبانی نمیشود</string>
    <string name="not_connected_to_the_internet">به نظر میاد به اینترنت وصل نیستید </string>
    <string name="up_to_the_new_version">به نسخه جدید بروزرسانی کنید</string>

    <string name="tracking_code_value">12354689 #</string>
    <string name="tracking_code_lable">کد پیگیری شما : </string>

    <string name="suggest">پیشنهاد میکنم : </string>
    <string name="new_changes">تغییرات جدید : </string>


    <string name="update_error_description">بهبود رابط کاربری \n\n\n اضافه شدن قابلیت فیلمبرداری \n\n\n اضافه شدن کارتابل پیام</string>
    <string name="no_internet_error_description">اینترنت خود را قطع و وصل نمایید \n\n\n گوشی خود را خاموش روشن کنید \n\n\n پیشنهاد بعدی مثلا </string>
    <string name="not_support_error_description">این یک متن تستی است برای توضیحات بیشتر\n\n    این یک متن تستی است برای توضیحات بیشتر\n\n    این یک متن تستی است برای توضیحات بیشتر\n\n    این یک متن تستی است برای توضیحات بیشتر\n\n        </string>
    <string name="no_server_error_description">این مشکل از سمت ما رخ داده است . کمی دیگر تلاش کنید \n\n\n یا \n\n\n این یک متن تستی است برای توضیحات بیشتر\n\n    این یک متن تستی است برای توضیحات بیشتر\n\n    این یک متن تستی است برای توضیحات بیشتر\n\n    این یک متن تستی است برای توضیحات بیشتر\n\n    این یک متن تستی است برای توضیحات بیشتر</string>


    <!--    custom keboard login-->
    <string name="define_app_password"> بااستفاده از رمز کوتاه ،در حالت آفلاین هم میتوانید از اپلیکیشن استفاده کنید</string>
    <string name="new_pass">رمز جدید</string>
    <string name="old_pass">رمز فعلی</string>
    <string name="login"> ورود به سامانه</string>
    <string name="repeat_pass">جهت تایید رمز کوتاه دوباره رمز خود را وارد نمایید</string>
    <string name="tv_error_key_pass">رمز وارد شده صحیح نیست!</string>
    <string name="one">1</string>
    <string name="tow">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="sxs">6</string>
    <string name="seven">7</string>
    <string name="eahgt">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="accept_password">تایید رمز کوتاه</string>
    <string name="create_pass">تعریف رمز کوتاه</string>

    <string name="you_have_entered_many_numbers">\شماره های خیلی زیادی وارد کرده اید\n صبر کنید تا 00:00:00 دیگر\</string>
    <string name="you_have_sent_many_requests">\متاسفانه از سمت شما درخواست های زیادی ارسال \n\n  شده است به همین دلیل تا تمام شدن زمان تعیین شده \n\n  امکان تایید شماره موبایل وجود ندارد\</string>
</resources>
