<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="88dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/back_layout_text_verify"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent">

        <com.haytech.haytechstyles.editTextVerify.EditTextVerify
            android:id="@+id/one"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="42dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/tow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.506" />

        <com.haytech.haytechstyles.editTextVerify.EditTextVerify
            android:id="@+id/tow"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/one"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/three"
            app:layout_constraintStart_toEndOf="@+id/one"
            app:layout_constraintTop_toTopOf="@+id/one" />

        <com.haytech.haytechstyles.editTextVerify.EditTextVerify
            android:id="@+id/three"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/tow"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/four"
            app:layout_constraintStart_toEndOf="@+id/tow"
            app:layout_constraintTop_toTopOf="@+id/tow" />

        <com.haytech.haytechstyles.editTextVerify.EditTextVerify
            android:id="@+id/four"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="91dp"
            app:layout_constraintBottom_toBottomOf="@+id/three"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/five"
            app:layout_constraintStart_toEndOf="@+id/three"
            app:layout_constraintTop_toTopOf="@+id/three" />

        <com.haytech.haytechstyles.editTextVerify.EditTextVerify
            android:id="@+id/five"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/four"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toEndOf="@+id/four"
            app:layout_constraintTop_toTopOf="@+id/four" />

        <ImageView
            android:id="@+id/img_clear"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginEnd="15dp"
            android:src="@drawable/back_btn"
            app:layout_constraintBottom_toBottomOf="@+id/five"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/five" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="316dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline3">

        <TextView
            android:id="@+id/tv1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/one"
            style="@style/KeyStyle"
            app:layout_constraintBottom_toBottomOf="@+id/tv2"
            app:layout_constraintEnd_toStartOf="@+id/tv2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv2"
            style="@style/KeyStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/tow"
            app:layout_constraintBottom_toBottomOf="@+id/tv3"
            app:layout_constraintEnd_toStartOf="@+id/tv3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tv1" />

        <TextView
            android:id="@+id/tv3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/three"
            style="@style/KeyStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tv2"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/fore"
            style="@style/KeyStyle"
            app:layout_constraintBottom_toBottomOf="@+id/tv5"
            app:layout_constraintEnd_toStartOf="@+id/tv5"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/tv1" />

        <TextView
            android:id="@+id/tv5"
            style="@style/KeyStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/five"
            app:layout_constraintBottom_toBottomOf="@+id/tv6"
            app:layout_constraintEnd_toStartOf="@+id/tv6"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tv4" />

        <TextView
            android:id="@+id/tv6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/sex"
            style="@style/KeyStyle"
            app:layout_constraintEnd_toEndOf="@+id/tv3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tv5"
            app:layout_constraintTop_toBottomOf="@+id/tv3" />

        <TextView
            android:id="@+id/tv7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/seven"
            style="@style/KeyStyle"
            app:layout_constraintBottom_toBottomOf="@+id/tv8"
            app:layout_constraintEnd_toStartOf="@+id/tv8"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/tv4" />

        <TextView
            android:id="@+id/tv8"
            style="@style/KeyStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/eahgt"
            app:layout_constraintBottom_toBottomOf="@+id/tv9"
            app:layout_constraintEnd_toStartOf="@+id/tv9"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tv7" />

        <TextView
            android:id="@+id/tv9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/nine"
            style="@style/KeyStyle"
            app:layout_constraintEnd_toEndOf="@+id/tv6"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tv8"
            app:layout_constraintTop_toBottomOf="@+id/tv6" />

        <TextView
            android:id="@+id/tv0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/zero"
            style="@style/KeyStyle"
            app:layout_constraintEnd_toEndOf="@+id/tv8"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toEndOf="@+id/tv7"
            app:layout_constraintTop_toBottomOf="@+id/tv8" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.87" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.13" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />
</androidx.constraintlayout.widget.ConstraintLayout>